# bitarray

./: .gitignore  .travis.yml  CMakeLists.txt  MANIFEST  README.rst  test-travis.sh  test.py
bitarray/: __init__.py  _bitarray.c  test_bitarray.py
test/: test_bitarray.py
